<?xml version="1.0" encoding="utf-8"?>
<!--
    סדר הפריטים כאן הוא סדר start->end. באפליקציה בעברית (RTL) זה אומר
    שהפריט הראשון יופיע מימין - בדיוק כמו בעיצוב. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_checkout"
        android:icon="@drawable/ic_cart_checkout"
        android:title="@string/nav_checkout" />

    <item
        android:id="@+id/nav_intake"
        android:icon="@drawable/ic_add_box"
        android:title="@string/nav_intake" />

    <item
        android:id="@+id/nav_inventory"
        android:icon="@drawable/ic_inventory"
        android:title="@string/nav_inventory" />

    <item
        android:id="@+id/nav_alerts"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_alerts" />

    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_analytics"
        android:title="@string/nav_reports" />

</menu>
